[gd_scene load_steps=13 format=2]

[ext_resource path="res://parts/engine0.png" type="Texture" id=1]
[ext_resource path="res://ShipPart.gd" type="Script" id=2]
[ext_resource path="res://smoke_particle.png" type="Texture" id=3]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://textbox.png" type="Texture" id=5]
[ext_resource path="res://parts/landing0.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="Curve" id=2]
max_value = 3.0
_data = [ Vector2( 0, 1.49964 ), 0.0, 0.0, 0, 0, Vector2( 0.993671, 3 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 30.0
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )

[sub_resource type="StyleBoxTexture" id=5]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="ShipPart" type="Area2D"]
script = ExtResource( 2 )
texture = ExtResource( 6 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Smoke" type="Particles2D" parent="."]
emitting = false
amount = 16
lifetime = 4.0
preprocess = 2.0
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 3 )

[node name="D" type="Node2D" parent="."]
z_index = 1

[node name="Description" type="RichTextLabel" parent="D"]
margin_left = -86.2552
margin_top = -185.007
margin_right = 87.7448
margin_bottom = -36.0069
rect_pivot_offset = Vector2( 0, 149 )
custom_styles/normal = SubResource( 5 )
custom_fonts/normal_font = SubResource( 6 )
text = "Part name
asdasd
asdadasd"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="input_event" from="." to="." method="_on_ShipPart_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_ShipPart_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ShipPart_mouse_exited"]
